<resources>
    <string name="app_name">NYTimy</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="Search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="settingSave">SAVE</string>
    <string name="setting_news_sports">Sports</string>
    <string name="setting_news_fashion"><![CDATA[Fashion & Style]]></string>
    <string name="settings_news_arts">Arts</string>
    <string name="setting_sort_old">Oldest</string>
    <string name="setting_sort_new">Newest</string>
</resources>
