<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/article_setting"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Begin Date"
            android:id="@+id/textView1"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/begin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"

            android:inputType="text"
            android:hint="YYYYMMDD" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:text="Sort"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sortChkNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/setting_sort_new" />

            <RadioButton
                android:id="@+id/sortChkOld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/setting_sort_old" />
        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="News Desk Value"
            android:id="@+id/textView3"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_news_arts"
                android:id="@+id/newsArt"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_news_sports"
                android:id="@+id/newsSport"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_news_fashion"
                android:id="@+id/newsFashion"
                android:checked="false" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingSave"
        android:id="@+id/btnSave"
        android:layout_gravity="center_horizontal" />

</LinearLayout>